--- a/public/index.html
+++ b/public/index.html
@@ -22,16 +22,17 @@
 
     <!--Material UI Font-->
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="preload"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <noscript
-      ><link
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    /></noscript>
+      />
+    </noscript>
 
     <!--Material UI Font Icons-->
     <link
