--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <!--React Slick-->
+    <link rel="stylesheet" type="text/css" charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
     <!--For a responsive Material UI-->
     <meta
       name="viewport"
