--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <!--Manifest-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>DinoAPP</title>
+    <title>DinoApp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
