--- a/public/index.html
+++ b/public/index.html
@@ -5,47 +5,23 @@
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <meta name="theme-color" content="#B32E55" />
+    <meta name="theme-color" content="whitesmoke" />
 
     <meta
       name="description"
-      content="Site para auxílio no acompanhamento de crianças em tratamento pós-hospitalar."
+      content="Aplicativo para auxílio no acompanhamento de crianças em tratamento de saúde."
     />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
-    <!--React Slick-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      charset="UTF-8"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
+    <!--Roboto Condensed for splash screen (It's the default PWA splash screen)-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 
     <!--For a responsive Material UI-->
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-
-    <!--Material UI Font-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet"
-      />
-    </noscript>
 
     <!--Material UI Font Icons-->
     <link
