--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
     <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
 
     <!--For a responsive Material UI-->
     <meta
