--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <!--For a responsive Material UI-->
+    <!--Responsive Mobile-->
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
