--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
     <title>DinoApp</title>
   </head>
-  <body>
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
