Feat(Login): Substituição do login para a lib oficial do Google

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
         href="https://fonts.googleapis.com/icon?family=Material+Icons"
     /></noscript>
 
+    <!--Google APIs-->
+    <script src="https://apis.google.com/js/api.js"></script>
+
     <!--Manifest-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
