--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,17 @@
 <html id="html" lang="en">
 	<head>
 		<meta charset="utf-8" />
-
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-
+		<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
 		<meta name="theme-color" content="whitesmoke" />
-
 		<meta
 			name="description"
 			content="Aplicativo para auxílio no acompanhamento de crianças em tratamento de saúde."
 		/>
-
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-
-		<!--Responsive Mobile-->
-		<meta
-			name="viewport"
-			content="minimum-scale=1, initial-scale=1, width=device-width"
-		/>
-
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--Google APIs-->
 		<script src="https://apis.google.com/js/api.js"></script>
-
-		<!--Manifest-->
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
 		<title>DinoApp</title>
 	</head>
 	<body id="body">
