--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html id="html" lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" type="image/png" href="/iconx/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="/iconx/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/iconx/android-192x192.png" sizes="192x192">
+		<link rel="apple-touch-icon" href="/iconx/apple-touch-icon-180x180.png" sizes="180x180">
+		<meta name="msapplication-config" content="/iconx/browserconfig.xml">
 		<meta
 			name="viewport"
 			content="minimum-scale=1, initial-scale=1, width=device-width"
@@ -12,7 +16,6 @@
 			name="description"
 			content="Aplicativo para auxílio no acompanhamento de crianças em tratamento de saúde."
 		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<!--Google APIs-->
 		<script src="https://apis.google.com/js/api.js"></script>
